Top margin to push content, not covered up by fixed nav

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -47,6 +47,9 @@
 // // Utility classes
 // @import "~bootstrap/scss/utilities";
 
+body {
+    margin-top: 30px;
+}
 
 .ng-sidebar{
     // width: 25%;
